# fwupd

./: meson.build  meson_options.txt
contrib/: fwupd.spec.in
libdfu/: dfu-patch.c
plugins/purism/: fu-plugin-purism.c
plugins/thunderbolt/: fu-plugin-thunderbolt.c  fu-self-test.c  meson.build
